--- a/src/views/mine/assets_bill/index.scss
+++ b/src/views/mine/assets_bill/index.scss
@@ -116,6 +116,14 @@
           color: #50c40d;
         }
       }
+      .experience-color{
+        .order-type::before{
+          background-color: #50c40d;
+        }
+        .now-balance{
+          color: #50c40d;
+        }
+      }
     }
   }
 }
