--- a/src/views/mine/mine_assets/index.scss
+++ b/src/views/mine/mine_assets/index.scss
@@ -1,4 +1,5 @@
 .mine-assets {
+  
   .assets-overview {
     padding: 16px;
     background: white;
@@ -34,9 +35,13 @@
       }
     }
   }
+  .has-owne{
+    margin-top: -34px;
+  }
   .assets-list-box {
     width: 92%;
     margin: 20px auto;
+    margin-top: 12px;
     background-color: white;
     box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.04);
     border-radius: 8px;
@@ -60,7 +65,7 @@
           width: 100%;
           border: 0;
           outline: none;
-          background-color: #eee;
+          background-color: #f8f8f8;
           border-radius: 4px;
           padding-left: 30px;
           font-size: 13px;
