--- a/src/views/trade/index.scss
+++ b/src/views/trade/index.scss
@@ -378,6 +378,15 @@
             font-size: 14px;
             font-weight: 500;
           }
+          .experience-order{
+            margin-left: 4px;
+            background:url('../../assets/images/text_bg.png');
+            background-size: 100% 100%;
+            padding: 3px 12px;
+            font-size: 12px;
+            color: #FCA443;
+            font-weight: 500;
+          }
         }
         .order-status {
           font-size: 13px;
