--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3604085 */
-  src: url('iconfont.woff2?t=1661243589519') format('woff2'),
-       url('iconfont.woff?t=1661243589519') format('woff'),
-       url('iconfont.ttf?t=1661243589519') format('truetype'),
-       url('iconfont.svg?t=1661243589519#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1666247709540') format('woff2'),
+       url('iconfont.woff?t=1666247709540') format('woff'),
+       url('iconfont.ttf?t=1666247709540') format('truetype'),
+       url('iconfont.svg?t=1666247709540#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,54 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-close:before {
+  content: "\e6a7";
+}
+
+.icon-right:before {
+  content: "\e642";
+}
+
+.icon-shangjia:before {
+  content: "\e629";
+}
+
+.icon-a-xinzengshanghubeifen4:before {
+  content: "\e620";
+}
+
+.icon-a-xinzengshanghubeifen47:before {
+  content: "\e621";
+}
+
+.icon-a-xinzengshanghubeifen46:before {
+  content: "\e622";
+}
+
+.icon-a-xinzengshanghubeifen44:before {
+  content: "\e623";
+}
+
+.icon-a-xinzengshanghubeifen42:before {
+  content: "\e624";
+}
+
+.icon-a-xinzengshanghubeifen45:before {
+  content: "\e625";
+}
+
+.icon-bianzu1:before {
+  content: "\e626";
+}
+
+.icon-a-xinzengshanghubeifen41:before {
+  content: "\e627";
+}
+
+.icon-a-xinzengshanghubeifen43:before {
+  content: "\e628";
 }
 
 .icon-a-bianzu3:before {
