--- a/src/views/home_out/index.scss
+++ b/src/views/home_out/index.scss
@@ -69,9 +69,9 @@
       bottom: 0;
       left: 0;
       height: 28px;
-      width: 100%;
       background-color: rgba(0, 0, 0, 0);
       padding: 0 12px;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -94,15 +94,21 @@
             height: 12px;
           }
         }
-        .ann-swiper{
-          flex: 1;
+        .ann-swiper {
           height: 18px;
+          width: 50%;
           .adm-swiper-vertical {
-            .adm-swiper-track-inner{
+            .adm-swiper-track-inner {
               height: 18px;
               text-align: left;
-              font-size: 12px;
-              color: white;
+              p {
+                font-size: 12px;
+                color: white;
+                width: 100%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
               line-height: 18px;
             }
           }
@@ -111,6 +117,9 @@
     }
 
     .ann-list-icon {
+      position: absolute;
+      right: 8px;
+      bottom: 6px;
       img {
         width: 12px;
         height: 12px;
@@ -192,6 +201,9 @@
         margin-right: 8px;
         display: flex;
         align-items: center;
+        background-color: white;
+        border-radius: 4px;
+        overflow: hidden;
         img {
           width: 34px;
           height: 34px;
