--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -32,3 +32,13 @@
 .hidden-nav {
   transform: translateY(100%);
 }
+.th-footer{
+  .adm-tab-bar-item-active {
+    .iconfont {
+      color: #00D9B5;
+    }
+    .adm-tab-bar-item-title {
+      color: #00D9B5;
+    }
+  }
+}
