--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -96,6 +96,11 @@
         font-size: 14px;
       }
     }
+    .register-btn-th{
+      span{
+        color: #00D9B5;
+      }
+    }
   }
 }
 @media screen and (min-width: 1280px) {
