--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -139,6 +139,27 @@
       }
     }
   }
+  .mine-nav-th {
+    background: url("../../assets/images/mine_bg_th.png");
+    background-size: 100% 100%;
+    .account-box {
+      .account-right {
+        border: 1px solid #6adec4;
+        backdrop-filter: blur(1px);
+        background: rgba(36, 255, 87, 0.12);
+        p {
+          color: #00b18c;
+        }
+      }
+    }
+    .download-box {
+      background: url("../../assets/images/down_mine_th.png");
+      background-size: 100% 100%;
+      p {
+        color: #00dcae;
+      }
+    }
+  }
   .mine-assets-manage {
     // transform: translateY(-100px);
     width: 92%;
@@ -193,6 +214,36 @@
         width: 25%;
         margin-bottom: 0;
         margin-top: 12px;
+      }
+    }
+  }
+  .mine-assets-manage-th {
+    text-align: left;
+    .manage-title {
+      display: inline-block;
+    }
+    .manage-title::before {
+      display: none;
+    }
+    .manage-title::after {
+      content: "";
+      display:block;
+      width: 100%;
+      height: 2px;
+      margin-top: 4px;
+      background: linear-gradient(
+        270deg,
+        rgba(0, 190, 135, 0) 0%,
+        #00be87 100%
+      );
+    }
+    ul{
+      text-align: center;
+    }
+    .with-three {
+      text-align: center;
+      li{
+        margin-top: 0;
       }
     }
   }
