--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,6 @@
 .adm-tabs-header {
   border: 0;
 }
-// :root:root{
-//   --adm-color-primary: #00D9B5;
-// }
+:root:root{
+  --adm-color-primary: #00D9B5;
+}
