--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -42,3 +42,13 @@
     }
   }
 }
+.new-footer{
+  .adm-tab-bar-item-active {
+    .iconfont {
+      color: #6B7BFF;
+    }
+    .adm-tab-bar-item-title {
+      color: #6B7BFF;
+    }
+  }
+}
