--- a/src/App.scss
+++ b/src/App.scss
@@ -91,5 +91,6 @@
   border: 0;
 }
 :root:root{
-  --adm-color-primary: #00D9B5;
+  --adm-color-primary: #6B7BFF;
+  // --adm-color-primary: #00D9B5;
 }
