--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3604085 */
-  src: url('iconfont.woff2?t=1666598347461') format('woff2'),
-       url('iconfont.woff?t=1666598347461') format('woff'),
-       url('iconfont.ttf?t=1666598347461') format('truetype'),
-       url('iconfont.svg?t=1666598347461#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1667461117368') format('woff2'),
+       url('iconfont.woff?t=1667461117368') format('woff'),
+       url('iconfont.ttf?t=1667461117368') format('truetype'),
+       url('iconfont.svg?t=1667461117368#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,30 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-bofangqi-bofang:before {
+  content: "\e6a4";
+}
+
+.icon-xiazai-2:before {
+  content: "\e638";
+}
+
+.icon-a-bianzu32:before {
+  content: "\e634";
+}
+
+.icon-a-bianzu2:before {
+  content: "\e635";
+}
+
+.icon-a-bianzu11:before {
+  content: "\e636";
+}
+
+.icon-bianzu3:before {
+  content: "\e637";
 }
 
 .icon-a-bianzu31:before {
