--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -160,6 +160,34 @@
       }
     }
   }
+  .mine-nav-new {
+    background: url("../../assets/images/home_new/mine_bg_new.png");
+    background-size: 100% 100%;
+    p {
+      color: white;
+    }
+    .account-box {
+      .account-left {
+        .account-msg {
+          p {
+            color: white !important;
+          }
+        }
+      }
+      .account-right {
+        p {
+          color: white;
+        }
+      }
+    }
+    .download-box {
+      background: url("../../assets/images/down_mine_new.png");
+      background-size: 100% 100%;
+      p {
+        color: #3245e3;
+      }
+    }
+  }
   .mine-assets-manage {
     // transform: translateY(-100px);
     width: 92%;
@@ -177,6 +205,9 @@
       font-size: 16px;
       font-weight: 500;
       color: #333;
+      img {
+        display: none;
+      }
     }
     .manage-title::before {
       display: inline-block;
@@ -227,7 +258,7 @@
     }
     .manage-title::after {
       content: "";
-      display:block;
+      display: block;
       width: 100%;
       height: 2px;
       margin-top: 4px;
@@ -237,14 +268,35 @@
         #00be87 100%
       );
     }
-    ul{
+    ul {
       text-align: center;
     }
     .with-three {
       text-align: center;
-      li{
+      li {
         margin-top: 0;
       }
+    }
+  }
+  .mine-assets-manage-new {
+    box-shadow: none;
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px 0px rgba(100, 236, 75, 0.1);
+    padding: 7px 10px 13px;
+    .manage-title {
+      display: flex;
+      align-items: center;
+      font-weight: 400;
+      font-size: 13px;
+      img {
+        display: block;
+        width: 25px;
+        height: 17px;
+        margin-right: 4px;
+      }
+    }
+    .manage-title::before {
+      display: none;
     }
   }
   .t-100 {
